fix: сделать исправления по ревью